@@ -1,3 +1,10 @@
+2012-06-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/z80/ralloc2.cc,
+	  src/z80/gen.c,
+	  src/z80/peep.c:
+	  Improvements to non-destructive and, including #3526286.
+
 2012-06-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCicode.c:
